// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Customized 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    No Header
  </h3>
  <div
    aria-pressed={false}
    className="sc-iwyYcG ebUSMX sc-card  "
    disabled={false}
    height="140px"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    width="160px"
  >
    <div
      className="sc-bBXqnf lgXazE sc-cardbodycontainer "
    >
      <div
        className="sc-fKFyDc cwAAVE sc-cardbody "
      >
        <div
          className="sc-cxFLnm bjrgqi sc-circularprogressbar"
        >
          <svg
            height={65}
            width={65}
          >
            <circle
              className="sc-giIncl gwkwck"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
            />
            <circle
              className="sc-iJuUWI gNPhny"
              color="#595A78"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
              transform="rotate(-90 32.5  32.5)"
            />
            <text
              className="sc-hKgILt gmmoer sc-circularprogressbar-text"
              dominantBaseline="middle"
              textAnchor="middle"
              x="50%"
              y="50%"
            >
              60%
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    No Body with 
    140px
     height
  </h3>
  <div
    aria-pressed={false}
    className="sc-iwyYcG ebUSMX sc-card  "
    disabled={false}
    height="140px"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    width="160px"
  >
    <div
      className="sc-kfzAmx gvyKIF sc-cardheader "
    >
      <div>
        RINGXcore
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    No Body with auto height
  </h3>
  <div
    aria-pressed={false}
    className="sc-iwyYcG vkeml sc-card  "
    disabled={false}
    height="auto"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    width="160px"
  >
    <div
      className="sc-kfzAmx gvyKIF sc-cardheader "
    >
      <div>
        RINGXcore
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Multiple Bodies
  </h3>
  <div
    aria-pressed={false}
    className="sc-iwyYcG ebUSMX sc-card  "
    disabled={false}
    height="140px"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
    width="160px"
  >
    <div
      className="sc-kfzAmx gvyKIF sc-cardheader "
    >
      <div>
        RINGXcore
      </div>
    </div>
    <div
      className="sc-bBXqnf lgXazE sc-cardbodycontainer "
    >
      <div
        className="sc-fKFyDc cwAAVE sc-cardbody "
      >
        <div
          className="sc-cxFLnm bjrgqi sc-circularprogressbar"
        >
          <svg
            height={65}
            width={65}
          >
            <circle
              className="sc-giIncl gwkwck"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
            />
            <circle
              className="sc-iJuUWI gNPhny"
              color="#595A78"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
              transform="rotate(-90 32.5  32.5)"
            />
            <text
              className="sc-hKgILt gmmoer sc-circularprogressbar-text"
              dominantBaseline="middle"
              textAnchor="middle"
              x="50%"
              y="50%"
            >
              60%
            </text>
          </svg>
        </div>
      </div>
      <div
        className="sc-fKFyDc cwAAVE sc-cardbody "
      >
        <div
          className="sc-cxFLnm bjrgqi sc-circularprogressbar"
        >
          <svg
            height={65}
            width={65}
          >
            <circle
              className="sc-giIncl gwkwck"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
            />
            <circle
              className="sc-iJuUWI gNPhny"
              color="#595A78"
              cx={32.5}
              cy={32.5}
              r={30}
              strokeWidth={5}
              transform="rotate(-90 32.5  32.5)"
            />
            <text
              className="sc-hKgILt gmmoer sc-circularprogressbar-text"
              dominantBaseline="middle"
              textAnchor="middle"
              x="50%"
              y="50%"
            >
              60%
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Customized Card (Size / Colors)
  </h3>
  <div
    className="sc-ezrdKe gOjJvx"
  >
    <div
      aria-pressed={false}
      className="sc-iwyYcG vkIgb sc-card  "
      disabled={false}
      height="200px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={false}
      className="sc-iwyYcG cawLqk sc-card  "
      disabled={false}
      height="120px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="500px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Props for all cards: width: 
    160px
    , height:
     
    140px
  </h3>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Normal Card
  </h3>
  <div
    className="sc-ezrdKe gOjJvx"
  >
    <div
      aria-pressed={false}
      className="sc-iwyYcG gNmbEL sc-card  "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={false}
      className="sc-iwyYcG faMDEm sc-card  "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={false}
      className="sc-iwyYcG ebUSMX sc-card  "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Normal Card Disabled
  </h3>
  <div
    className="sc-ezrdKe gOjJvx"
  >
    <div
      aria-pressed={null}
      className="sc-iwyYcG bUXCfe sc-card  "
      disabled={true}
      height="140px"
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={null}
      className="sc-iwyYcG dSBULT sc-card  "
      disabled={true}
      height="140px"
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={null}
      className="sc-iwyYcG kfUaOS sc-card  "
      disabled={true}
      height="140px"
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    Normal Card - Active
  </h3>
  <div
    className="sc-ezrdKe gOjJvx"
  >
    <div
      aria-pressed={true}
      className="sc-iwyYcG gNmbEL sc-card active "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={true}
      className="sc-iwyYcG faMDEm sc-card active "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={true}
      className="sc-iwyYcG ebUSMX sc-card active "
      disabled={false}
      height="140px"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="sc-gsTCUz jXevwc"
  >
    No onClick props
  </h3>
  <div
    className="sc-ezrdKe gOjJvx"
  >
    <div
      aria-pressed={null}
      className="sc-iwyYcG leOISq sc-card  "
      disabled={false}
      height="140px"
      onClick={null}
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={null}
      className="sc-iwyYcG dtChtn sc-card  "
      disabled={false}
      height="140px"
      onClick={null}
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-pressed={null}
      className="sc-iwyYcG ePaQpy sc-card  "
      disabled={false}
      height="140px"
      onClick={null}
      onKeyDown={[Function]}
      role={null}
      tabIndex={null}
      width="160px"
    >
      <div
        className="sc-kfzAmx gvyKIF sc-cardheader "
      >
        <div>
          RINGXcore
        </div>
      </div>
      <div
        className="sc-bBXqnf lgXazE sc-cardbodycontainer "
      >
        <div
          className="sc-fKFyDc cwAAVE sc-cardbody "
        >
          <div
            className="sc-cxFLnm bjrgqi sc-circularprogressbar"
          >
            <svg
              height={65}
              width={65}
            >
              <circle
                className="sc-giIncl gwkwck"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
              />
              <circle
                className="sc-iJuUWI gNPhny"
                color="#595A78"
                cx={32.5}
                cy={32.5}
                r={30}
                strokeWidth={5}
                transform="rotate(-90 32.5  32.5)"
              />
              <text
                className="sc-hKgILt gmmoer sc-circularprogressbar-text"
                dominantBaseline="middle"
                textAnchor="middle"
                x="50%"
                y="50%"
              >
                60%
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
